istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: gateway-service
            port:
              number: 8083
